--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html>
    <body>
       <p>Radio check. Pilot, please confirm.</p>
+      <p>Confirm. Radio is a go. Good day to fly.</p>
    </body>
 </html>
