--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
       <p>Radio check. Pilot, please confirm.</p>
       <p>Confirm. Radio is a go. Good day to fly.</p>
       <p>Watch out for those headwinds to the northeast!</p>
+      <p>Dropping to 2k feet to avoid headwinds. Thanks for the heads up!</p>
    </body>
 </html>
