--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
       <p>Confirm. Radio is a go. Good day to fly.</p>
       <p>Watch out for those headwinds to the northeast!</p>
       <p>Dropping to 2k feet to avoid headwinds. Thanks for the heads up!</p>
+      <p>Roger that! Should be smooth sailing from here on it.</p>
    </body>
 </html>
