--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+   <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <html>
    <body>
       <p>Radio check. Pilot, please confirm.</p>
